<resources>
    <string name="app_name">Notification</string>
    <string name="Button1">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">channel des</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type-Password</string>
    <string name="register">Register</string>
    <string name="cancel">CANCEL</string>
</resources>
